# vite-react-ts-template

./: .browserslistrc  .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  README.md  biome.json  codegen.yml  jest.config.js  jest.setup.js  package-lock.json  package.json  postcss.config.js  vite.config.ts
.github/workflows/: ci.yml  eslint.yml  jest.yml  tsc-check.yml
.husky/: pre-commit
example-crate/: Cargo.toml
example-crate/src/: lib.rs
src/: App.module.css  App.test.tsx  App.tsx  Continents.tsx  app.test.tsx  app.tsx  index.css  main.css  main.tsx  vite-env.d.ts
src/graphql/: urqlClient.ts
src/graphql/queries/: continentsQuery.graphql
src/hooks/: useCounter.ts
test/__mocks__/: styleMock.js
